test/extern/ferguson/mismatch-errors/mismatch-ri-iv.good
mismatch-ri-iv.chpl:4: error: mismatched number of arguments in call to 'returnIntFromIntArg'
mismatch-ri-iv.chpl:7: note: function called here
note: check that the number of arguments match the C function signature
